Completamos la guía practica de grillas

--- a/index.html
+++ b/index.html
@@ -9,13 +9,45 @@
     <title>Primer proyecto</title>
 </head>
 <body>
-    <button>Kawai</button>
-    <h1>Hola mundo</h1>
-    <p>Ejemplo #1</p>
-    <p>Ejemplo #2</p>
-    <p>Ejemplo #3</p>
-    <p>Ejemplo #4</p>
-    Contenido
+    <div class="jumbotron jumbotron-fluid">
+        <h2 class="display-2">Proyecto</h2>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <h3 class="display-3">Item1</h3>
+                    <p class="lead">Esta es la descripción del item 1.</p>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <h3 class="display-3">Item2</h3>
+                    <p class="lead">Esta es la descripción del item 2.</p>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <h3 class="display-3">Item3</h3>
+                    <p class="lead">Esta es la descripción del item 3.</p>
+                </div>
+
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <h3 class="display-6">Hotel 1</h3>
+                    <p class="lead">Esta es la descripción del hotel 1.</p>
+                    <button class="btn btn-outline-dark">Ver hotel 1</button>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <h3 class="display-6">Hotel 2</h3>
+                    <p class="lead">Esta es la descripción del hotel 2.</p>
+                    <button class="btn btn-outline-dark">Ver hotel 2</button>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <h3 class="display-6">Hotel 3</h3>
+                    <p class="lead">Esta es la descripción del hotel 3.</p>
+                    <button class="btn btn-outline-dark">Ver hotel 3</button>
+                </div>
+                
+            </div>
+            
+        </div>
+      </div>
     <script src="/node_modules/@popperjs/core/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 
