--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
             <div class="col-xs-12 col-sm-6 col-md-4">
                 <h3 class="display-6">Hotel 1</h3>
                 <p class="lead">Esta es la descripción del hotel 1.</p>
-                <button class="btn btn-outline-dark">Ver hotel 1</button>
+                <button class="btn btn-success">Ver hotel 1</button>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
                 <h3 class="display-6">Hotel 2</h3>
                 <p class="lead">Esta es la descripción del hotel 2.</p>
-                <button class="btn btn-outline-dark">Ver hotel 2</button>
+                <button class="btn btn-success">Ver hotel 2</button>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
                 <h3 class="display-6">Hotel 3</h3>
                 <p class="lead">Esta es la descripción del hotel 3.</p>
-                <button class="btn btn-outline-dark">Ver hotel 3</button>
+                <button class="btn btn-success">Ver hotel 3</button>
             </div>
             
         </div>
@@ -152,17 +152,17 @@
     
     <footer class="footer">
         <div class="row">
-            <div class="col-sm-4">
+            <div class="col-sm-4 d-flex flex-column align-items-start">
                 <a href="facebook.com">facebook</a>
                 <a href="twitter.com">twitter</a>
                 <a href="instagram.com">instagram</a>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 d-flex flex-column align-items-center">
                 <address>
                     Esquina de chapultepec
                 </address>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 d-flex flex-column align-items-end">
                 <a href="">Acerca</a>
                 <a href="">Contacto</a>
                 <a href="">Nosototros</a>
