--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <hr class="my-4">
     </div>
               <!-- ************************************** Utilizando row y col ************************************** -->
-
+    <!--
     <div class="container">
         <div class="row">
             <div class="card">
@@ -64,7 +64,7 @@
         </div>
         
     </div>
-      
+    -->
       <!-- ************************************** Utilizando Flex ************************************** -->
     <div class="container">
         <div class="row">
@@ -158,8 +158,11 @@
                 <a href="instagram.com">instagram</a>
             </div>
             <div class="col-sm-4 d-flex flex-column align-items-center">
+                <h4>
+                    Oficina central
+                </h4>
                 <address>
-                    Esquina de chapultepec
+                    Insurgentes Sur. CDMX 30321
                 </address>
             </div>
             <div class="col-sm-4 d-flex flex-column align-items-end">
@@ -172,6 +175,5 @@
     </footer>
     <script src="/node_modules/@popperjs/core/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-
 </body>
 </html>
