Agregación de iconos al footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="estilos.css">
+    <script src="node_modules/@fortawesome/fontawesome-free/js/all.min.js"></script>
     
     <title>Primer proyecto</title>
 </head>
@@ -45,7 +46,7 @@
         </div>
       </nav>
     <div class="jumbotron ">
-        <h2 class="display-2">Proyecto</h2>
+        <h2 class="display-2">Proyecto </i></h2>
         
     </div>
     <nav class="container breadcumb1" style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
@@ -192,13 +193,13 @@
     <footer class="footer">
         <div class="row">
             <div class="col-sm-4 d-flex flex-column align-items-start">
-                <a href="facebook.com">facebook</a>
-                <a href="twitter.com">twitter</a>
-                <a href="instagram.com">instagram</a>
+                <a href="facebook.com"><i class="fab fa-facebook"></i>facebook</a>
+                <a href="twitter.com"><i class="fab fa-twitter"></i>twitter</a>
+                <a href="instagram.com"><i class="fab fa-instagram"></i>instagram</a>
             </div>
             <div class="col-sm-4 d-flex flex-column align-items-center">
                 <h4>
-                    Oficina central
+                    <i class="fas fa-map-marker-alt"></i> Oficina central
                 </h4>
                 <address>
                     Insurgentes Sur. CDMX 30321
