--- a/about.html
+++ b/about.html
@@ -20,11 +20,14 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               
               <li class="nav-item">
-                <a class="nav-link active" href="#">About</a>
+                <a class="nav-link active" >About</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link " href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                  <a class="nav-link " href="contact.html" >Contacto</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link " href="contact.html" >Precios</a>
+                  </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Dropdown
