--- a/index.html
+++ b/index.html
@@ -121,7 +121,32 @@
     </div>
     -->
 
+    <div class="container">
 
+        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="1500">
+                    <img src="https://placeimg.com/500/101/arch" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item" data-bs-interval="2000">
+                    <img src="https://placeimg.com/500/102/arch" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://placeimg.com/500/103/arch" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
     <!-- ************************************** Utilizando Flex ************************************** -->
 
     <div class="container">
@@ -198,7 +223,8 @@
                     <p class="lead">Esta es la descripción del hotel 3.</p>
                 </div>
                 <button class="btn btn-success">Ver hotel 3</button>
-                <button type="button" class="btn btn-lg btn-warning" data-bs-toggle="popover" title="Puedes dejarnos tu email para contactarte en cuanto se desocupe "
+                <button type="button" class="btn btn-lg btn-warning" data-bs-toggle="popover"
+                    title="Puedes dejarnos tu email para contactarte en cuanto se desocupe "
                     data-bs-content="gracias">Sin lugares disponibles</button>
             </div>
             <div
@@ -209,7 +235,8 @@
                     <p class="lead">Esta es la descripción del hotel 4.</p>
                 </div>
                 <button class="btn btn-success">Ver hotel 4</button>
-                <button type="button" class="btn btn-lg btn-warning" data-bs-toggle="popover" title="Puedes dejarnos tu email para contactarte en cuanto se desocupe "
+                <button type="button" class="btn btn-lg btn-warning" data-bs-toggle="popover"
+                    title="Puedes dejarnos tu email para contactarte en cuanto se desocupe "
                     data-bs-content="gracias">Sin lugares disponibles</button>
             </div>
             <div
@@ -220,7 +247,8 @@
                     <p class="lead">Esta es la descripción del hotel 5.</p>
                 </div>
                 <button class="btn btn-success">Ver hotel 5</button>
-                <button type="button" class="btn btn-lg btn-warning" data-bs-toggle="popover" title="Puedes dejarnos tu email para contactarte en cuanto se desocupe "
+                <button type="button" class="btn btn-lg btn-warning" data-bs-toggle="popover"
+                    title="Puedes dejarnos tu email para contactarte en cuanto se desocupe "
                     data-bs-content="gracias">Sin lugares disponibles</button>
             </div>
             <div
@@ -231,7 +259,8 @@
                     <p class="lead">Esta es la descripción del hotel 6.</p>
                 </div>
                 <button class="btn btn-success">Ver hotel 6</button>
-                <button type="button" class="btn btn-lg btn-warning" data-bs-toggle="popover" title="Puedes dejarnos tu email para contactarte en cuanto se desocupe "
+                <button type="button" class="btn btn-lg btn-warning" data-bs-toggle="popover"
+                    title="Puedes dejarnos tu email para contactarte en cuanto se desocupe "
                     data-bs-content="gracias">Sin lugares disponibles</button>
             </div>
             <div
@@ -242,7 +271,8 @@
                     <p class="lead">Esta es la descripción del hotel 7.</p>
                 </div>
                 <button class="btn btn-success">Ver hotel 7</button>
-                <button type="button" class="btn btn-lg btn-warning" data-bs-toggle="popover" title="Puedes dejarnos tu email para contactarte en cuanto se desocupe "
+                <button type="button" class="btn btn-lg btn-warning" data-bs-toggle="popover"
+                    title="Puedes dejarnos tu email para contactarte en cuanto se desocupe "
                     data-bs-content="gracias">Sin lugares disponibles</button>
             </div>
             <div
@@ -254,7 +284,8 @@
                         hoteles del hotel 8.</p>
                 </div>
                 <button class="btn btn-success">Ver hotel 8</button>
-                <button type="button" class="btn btn-lg btn-warning" data-bs-toggle="popover" title="Puedes dejarnos tu email para contactarte en cuanto se desocupe "
+                <button type="button" class="btn btn-lg btn-warning" data-bs-toggle="popover"
+                    title="Puedes dejarnos tu email para contactarte en cuanto se desocupe "
                     data-bs-content="gracias">Sin lugares disponibles</button>
             </div>
             <div
@@ -266,7 +297,8 @@
                     <p class="lead">Esta es la descripción del hotel 9.</p>
                 </div>
                 <button class="btn btn-success">Ver hotel 9</button>
-                <button type="button" class="btn btn-lg btn-warning" data-bs-toggle="popover" title="Puedes dejarnos tu email para contactarte en cuanto se desocupe "
+                <button type="button" class="btn btn-lg btn-warning" data-bs-toggle="popover"
+                    title="Puedes dejarnos tu email para contactarte en cuanto se desocupe "
                     data-bs-content="gracias">Sin lugares disponibles</button>
             </div>
 
