Incluimos scripts para la la version distribuible

--- a/prices.html
+++ b/prices.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- build:css dist/prices.css -->
     <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="estilos.css">
-    <script src="node_modules/@fortawesome/fontawesome-free/js/all.min.js"></script>
+    <link rel="stylesheet" href="styles/estilos.css">
+    <!-- endbuild -->
+    
     
     <title>About</title>
 </head>
 <body>
-    <nav class="navbar sticky-top navbar-expand-lg navbar-dark" style="background-color: #2c3e50;">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark" id="navbar">
         <div class="container-fluid">
           <a class="navbar-brand active" href="index.html">Navbar</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -178,7 +180,10 @@
             </div>
         </div>
     </footer>
+    <!-- build:js dist/prices.js -->
+    <script src="node_modules/@fortawesome/fontawesome-free/js/all.min.js"></script>
     <script src="/node_modules/@popperjs/core/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-</body>
+    <!-- endbuild -->
+  </body>
 </html>
