--- a/about.html
+++ b/about.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- build:css dist/about.css -->
-    <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles/estilos.css">
+    <!-- build:css css/index.css -->
+    <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/styles.css">
     <!-- endbuild -->
     <title>About</title>
 </head>
@@ -121,13 +122,13 @@
     <footer class="footer">
         <div class="row">
             <div class="col-sm-4 d-flex flex-column align-items-start">
-                <a href="facebook.com">facebook</a>
-                <a href="twitter.com">twitter</a>
-                <a href="instagram.com">instagram</a>
+                <a href="facebook.com"><i class="fab fa-facebook"></i>facebook</a>
+                <a href="twitter.com"><i class="fab fa-twitter"></i>twitter</a>
+                <a href="instagram.com"><i class="fab fa-instagram"></i>instagram</a>
             </div>
             <div class="col-sm-4 d-flex flex-column align-items-center">
                 <h4>
-                    Oficina central
+                    <i class="fas fa-map-marker-alt"></i> Oficina central
                 </h4>
                 <address>
                     Insurgentes Sur. CDMX 30321
@@ -141,10 +142,15 @@
             </div>
         </div>
     </footer>
-    <!-- build:js dist/about.js -->
-
-    <script src="/node_modules/@popperjs/core/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <!-- build:js js/main.js -->
+    <script src="/node_modules/@fortawesome/fontawesome-free/js/all.min.js"></script>
+    <script src="/node_modules/@popperjs/core/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
+    <script src="js/index.js"></script>
     <!-- endbuild -->
 </body>
 </html>
